--- a/es6_oop/mvp.html
+++ b/es6_oop/mvp.html
@@ -17,7 +17,7 @@
 
 <body>
     <section id="stage"></section>
-    <script src="4/util.js"></script>
+    <script src="util.js"></script>
 <script>
 const App = class{
     constructor(_parent = err()){
