update html parser

--- a/es6_function/3_html-parser/parser.html
+++ b/es6_function/3_html-parser/parser.html
@@ -108,4 +108,11 @@
   - 현재 내가 바라보는 컨택스트가 누구인가 있으면 된다. 하나의 리턴포인트만 있으면 된다.
   과제 2. json 파서, - 문자열안에 중괄효 인식.
   과제 3. 꼬리물기 최적화된 재귀함수로 변경
+
+  1. stack을 제거하고 curr만 남겨 외곽 루프를 제거하기
+  2. 속성이 포함된 html을 파싱하기
+  <div style="background:red" class="test">...</div>
+  이런 식으로 태그 안의 여러 속성을 각 노드에서 attribute라는 별도의 배열에 저장하기
+  3. json 문자열을 파싱하여 객체를 만들어주는 파서 작성하기
+
 -->
