--- a/es6_function/3_html-parser/homework.html
+++ b/es6_function/3_html-parser/homework.html
@@ -67,7 +67,7 @@
   }  
 
 
-  console.log('------', parser(`<div style="background:red" class="test">a<a>b</a>c<img src="test"/>d</div>`))
+  console.log('------', parser(`<div style="background:red" class="test">a<a>b<a>b</a></a>c<img src="test"/>d</div>`))
   </script>
 </body>
 </html>
